--- a/TheMoneyTree/frontend/package.json
+++ b/TheMoneyTree/frontend/package.json
@@ -12,18 +12,30 @@
     "@expo-google-fonts/comfortaa": "^0.2.3",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~50.0.14",
-    "expo-app-loading": "^2.1.1",
-    "expo-status-bar": "~1.11.1",
+    "@unimodules/core": "^7.1.2",
+    "@unimodules/react-native-adapter": "^6.3.9",
+    "deprecated-react-native-prop-types": "^5.0.0",
+    "expo": "^49.0.23",
+    "expo-app-loading": "^1.0.3",
+    "expo-router": "^3.4.8",
+    "expo-status-bar": "~1.6.0",
+    "nativewind": "^4.0.36",
+    "node": "^18.20.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.51.2",
-    "react-native": "0.73.6",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0",
-    "react-navigation": "^5.0.0"
+    "react-native": "0.72.10",
+    "react-native-css-interop": "^0.0.34",
+    "react-native-reanimated": "^3.8.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
+    "react-navigation": "^5.0.0",
+    "tailwind": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.4.3"
   },
   "private": true
 }
