--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@expo-google-fonts/comfortaa": "^0.2.3",
     "expo-app-loading": "^2.1.1",
-    "expo-font": "^11.10.3"
+    "expo-font": "^11.10.3",
+    "nativewind": "^2.0.11",
+    "tailwindcss": "^3.4.3"
   }
 }
