--- a/TheMoneyTree/frontend/package.json
+++ b/TheMoneyTree/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "themoneytree",
-  "version": "1.0.0",
+  "version": "1.6.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -13,13 +13,16 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@unimodules/core": "^7.1.2",
+    "@unimodules/react-native-adapter": "^6.3.9",
     "amqplib": "^0.5.2",
     "expo": "^49.0.23",
     "expo-app-loading": "^1.0.3",
     "expo-document-picker": "~11.5.4",
     "expo-router": "^2.0.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "nativewind": "^2.0.11",
+    "nativewind": "^4.0.36",
     "node": "^18.20.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
@@ -29,6 +32,7 @@
     "react-native-document-picker": "^9.1.2",
     "react-native-fs": "^2.20.0",
     "react-native-pie-chart": "^3.0.2",
+    "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "^0.19.10",
@@ -37,7 +41,9 @@
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
-    "tailwindcss": "^3.3.2"
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   },
   "private": true
 }
