--- a/TheMoneyTree/frontend/package.json
+++ b/TheMoneyTree/frontend/package.json
@@ -10,36 +10,36 @@
   },
   "dependencies": {
     "@expo-google-fonts/comfortaa": "^0.2.3",
-    "@expo/webpack-config": "^19.0.0",
+    "@expo/webpack-config": "~19.0.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@unimodules/core": "^7.1.2",
     "@unimodules/react-native-adapter": "^6.3.9",
     "amqplib": "^0.5.2",
-    "expo": "^49.0.23",
+    "expo": "^51.0.1",
     "expo-app-loading": "^1.0.3",
-    "expo-document-picker": "~11.5.4",
-    "expo-router": "^2.0.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
+    "expo-document-picker": "~12.0.1",
+    "expo-router": "~3.5.11",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
     "nativewind": "^4.0.36",
     "node": "^18.20.0",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.2",
-    "react-native": "0.72.10",
+    "react-native": "0.74.1",
     "react-native-css-interop": "^0.0.34",
     "react-native-document-picker": "^9.1.2",
     "react-native-fs": "^2.20.0",
     "react-native-pie-chart": "^3.0.2",
-    "react-native-reanimated": "^3.11.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-web": "^0.19.10",
+    "react-native-reanimated": "3.10.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10",
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.5",
+    "@babel/core": "^7.24.0",
     "@babel/preset-react": "^7.24.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
