--- a/TheMoneyTree/frontend/app.json
+++ b/TheMoneyTree/frontend/app.json
@@ -15,7 +15,10 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "config": {
+        "usesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -26,6 +29,12 @@
     "web": {
       "bundler": "metro",
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-secure-store",
+      // {
+      //   "faceIDPermission": "Allow $(PRODUCT_NAME) to access your Face ID biometric data."
+      // }
+    ]
   }
 }
