--- a/TheMoneyTree/frontend/package.json
+++ b/TheMoneyTree/frontend/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "@expo-google-fonts/comfortaa": "^0.2.3",
-    "@expo/webpack-config": "~19.0.1",
+    "@expo/metro-config": "^0.18.3",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@unimodules/core": "^7.1.2",
     "@unimodules/react-native-adapter": "^6.3.9",
     "amqplib": "^0.5.2",
-    "expo": "^51.0.1",
+    "expo": "^51.0.2",
     "expo-app-loading": "^1.0.3",
     "expo-document-picker": "~12.0.1",
     "expo-router": "~3.5.11",
+    "expo-secure-store": "~13.0.1",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^4.0.36",
@@ -32,11 +33,13 @@
     "react-native-document-picker": "^9.1.2",
     "react-native-fs": "^2.20.0",
     "react-native-pie-chart": "^3.0.2",
-    "react-native-reanimated": "3.10.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "typescript": "~5.3.3",
+    "@types/react": "~18.2.79"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
