--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,52 +1,50 @@
 {
   "name": "themoneytree",
-  "version": "1.6.0",
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "type": "module",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo-google-fonts/comfortaa": "^0.2.3",
-    "@expo/metro-config": "^0.18.3",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.26",
-    "@unimodules/core": "^7.1.2",
-    "@unimodules/react-native-adapter": "^6.3.9",
-    "amqplib": "^0.5.2",
-    "expo": "^51.0.2",
-    "expo-app-loading": "^1.0.3",
-    "expo-document-picker": "~12.0.1",
-    "expo-router": "~3.5.11",
-    "expo-secure-store": "~13.0.1",
-    "expo-splash-screen": "~0.27.4",
+    "@expo/metro-runtime": "~3.2.1",
+    "@react-native/metro-config": "^0.74.83",
+    "@types/react": "~18.2.79",
+    "amqplib": "^0.10.3",
+    "emoji-mart": "^5.6.0",
+    "expo": "~51.0.8",
+    "expo-dev-client": "~4.0.14",
+    "expo-document-picker": "^12.0.1",
+    "expo-router": "^3.5.14",
+    "expo-secure-store": "^13.0.1",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^4.0.36",
-    "node": "^18.20.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.51.2",
-    "react-native": "0.74.1",
-    "react-native-css-interop": "^0.0.34",
-    "react-native-document-picker": "^9.1.2",
-    "react-native-fs": "^2.20.0",
+    "react-native": "^0.74.1",
     "react-native-pie-chart": "^3.0.2",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "react-navigation": "^5.0.0",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "~5.3.3",
-    "@types/react": "~18.2.79"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@babel/preset-react": "^7.24.1",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "@babel/plugin-transform-async-generator-functions": "^7.21.0",
+    "@babel/plugin-transform-class-properties": "^7.21.0",
+    "@babel/plugin-transform-logical-assignment-operators": "^7.21.0",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.21.0",
+    "@babel/plugin-transform-numeric-separator": "^7.21.0",
+    "@babel/plugin-transform-object-rest-spread": "^7.21.0",
+    "@babel/plugin-transform-optional-catch-binding": "^7.21.0",
+    "@babel/plugin-transform-optional-chaining": "^7.21.0",
+    "metro": "^0.80.9",
+    "querystring": "^0.2.1"
   },
   "private": true
 }
