--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@expo-google-fonts/comfortaa": "^0.2.3",
@@ -43,8 +44,16 @@
     "@babel/plugin-transform-object-rest-spread": "^7.21.0",
     "@babel/plugin-transform-optional-catch-binding": "^7.21.0",
     "@babel/plugin-transform-optional-chaining": "^7.21.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^51.0.2",
     "metro": "^0.80.9",
     "querystring": "^0.2.1"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "private": true
 }
