--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "expo-router": "^3.5.14",
     "expo-secure-store": "^13.0.1",
     "expo-status-bar": "~1.12.1",
+    "jest": "^29.4.0",
+    "jest-expo": "~51.0.2",
     "nativewind": "^4.0.36",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -30,6 +32,7 @@
     "react-native-pie-chart": "^3.0.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-web": "~0.19.10",
+    "react-test-renderer": "^18.2.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.3.3",
@@ -50,9 +53,10 @@
     "querystring": "^0.2.1"
   },
   "jest": {
+    "verbose": true,
     "preset": "jest-expo",
     "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|@tailwind)"
     ]
   },
   "private": true
