--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,6 @@
     "expo-router": "^3.5.14",
     "expo-secure-store": "^13.0.1",
     "expo-status-bar": "~1.12.1",
-    "jest": "^29.4.0",
     "jest-expo": "~51.0.2",
     "nativewind": "^4.0.36",
     "react": "18.2.0",
@@ -34,6 +33,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-web": "~0.19.10",
     "react-test-renderer": "^18.2.0",
+    "setimmediate": "^1.0.5",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.3.3",
@@ -59,7 +59,9 @@
     "testEnvironment": "jsdom",
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|@tailwind)"
-    ]
+    ],
+    "setupFiles": ["./jest.setup.js"]
+    
   },
   "private": true
 }
