--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.1",
+    "react-native-flatlist": "^0.0.0",
     "react-native-pie-chart": "^3.0.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-web": "~0.19.10",
@@ -60,8 +61,9 @@
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|@tailwind)"
     ],
-    "setupFiles": ["./jest.setup.js"]
-    
+    "setupFiles": [
+      "./jest.setup.js"
+    ]
   },
   "private": true
 }
