--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,69 +1,60 @@
 {
-  "name": "themoneytree",
+  "name": "m",
+  "main": "expo-router/entry",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "type": "module",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "start": "expo start",
+    "reset-project": "node ./scripts/reset-project.js",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest --watchAll",
+    "lint": "expo lint"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
     "@expo-google-fonts/comfortaa": "^0.2.3",
     "@expo/metro-runtime": "~3.2.1",
-    "@react-native/metro-config": "^0.74.83",
-    "@testing-library/react": "^15.0.7",
-    "@types/react": "~18.2.79",
-    "amqplib": "^0.10.3",
-    "emoji-mart": "^5.6.0",
-    "expo": "~51.0.8",
-    "expo-dev-client": "~4.0.14",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "expo": "~51.0.10",
+    "expo-constants": "~16.0.2",
     "expo-document-picker": "^12.0.1",
-    "expo-router": "^3.5.14",
-    "expo-secure-store": "^13.0.1",
+    "expo-font": "~12.0.6",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.15",
+    "expo-secure-store": "~13.0.1",
+    "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
-    "jest-expo": "~51.0.2",
-    "nativewind": "^4.0.36",
+    "expo-system-ui": "~3.0.5",
+    "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.1",
-    "react-native-flatlist": "^0.0.0",
+    "react-native": "0.74.1",
+    "react-native-auth0": "^3.2.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-pie-chart": "^3.0.2",
     "react-native-reanimated": "~3.10.1",
-    "react-native-web": "~0.19.10",
-    "react-test-renderer": "^18.2.0",
-    "setimmediate": "^1.0.5",
-    "tailwind": "^4.0.0",
-    "tailwindcss": "^3.4.3",
-    "typescript": "~5.3.3",
-    "uuid": "^9.0.0"
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/plugin-transform-async-generator-functions": "^7.21.0",
-    "@babel/plugin-transform-class-properties": "^7.21.0",
-    "@babel/plugin-transform-logical-assignment-operators": "^7.21.0",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.21.0",
-    "@babel/plugin-transform-numeric-separator": "^7.21.0",
-    "@babel/plugin-transform-object-rest-spread": "^7.21.0",
-    "@babel/plugin-transform-optional-catch-binding": "^7.21.0",
-    "@babel/plugin-transform-optional-chaining": "^7.21.0",
-    "jest": "^29.7.0",
-    "jest-expo": "^51.0.2",
-    "metro": "^0.80.9",
-    "querystring": "^0.2.1"
-  },
-  "jest": {
-    "verbose": true,
-    "preset": "jest-expo",
-    "testEnvironment": "jsdom",
-    "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|@tailwind)"
-    ],
-    "setupFiles": [
-      "./jest.setup.js"
-    ]
+    "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.12",
+    "@types/react": "~18.2.45",
+    "@types/react-test-renderer": "^18.0.7",
+    "autoprefixer": "^10.4.19",
+    "jest": "^29.2.1",
+    "jest-expo": "~51.0.1",
+    "nativewind": "^4.0.36",
+    "postcss": "^8.4.38",
+    "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.4.4",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
