--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "m",
+  "name": "themoneytree",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -46,6 +46,7 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
     "autoprefixer": "^10.4.19",
     "jest": "^29.2.1",
