updated router by changing app -> index and adding _layout - fixed tailwind issues

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -5,7 +5,7 @@
     "slug": "TheMoneyTree",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./app/assets/icon.png",
     "userInterfaceStyle": "automatic",
     "scheme":"com.example.themoneytree",
     "splash": {
