--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,11 +31,13 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.5",
     "expo-web-browser": "~13.0.3",
+    "lightningcss-darwin-x64": "^1.25.1",
     "pullstate": "^1.25.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-auth0": "^3.2.1",
+    "react-native-css-interop": "^0.0.36",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-pie-chart": "^3.0.2",
     "react-native-reanimated": "~3.10.1",
